tests/bad_programs/semantic_errors/redecl_params.notc
bool fun(string s, string s) {
    return s;
}

int main() {
    return 0;
}
